--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-psycopg2
-sqlalchemy
-datetime
+psycopg2==2.9.9
 gunicorn==20.1.0
-Flask==2.0.1
-pandas==1.3.3
+pandas==2.0.3
 plotly==5.3.1
-Flask-Bootstrap
-Flask-Migrate
-pytest
-Flask-Testing
-gunicorn
-seaborn
-numpy
+pytest==7.4.3
+seaborn==0.13.0
+unittest2==1.1.0
+SQLAlchemy==2.0.23
+numpy==1.25.1
+matplotlib==3.7.2
+Flask==3.0.0
+Flask-Bootstrap==3.3.7.1
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+Flask-Testing==0.8.1
+DateTime==5.1
+coverage==7.3.2
